@@ -4,6 +4,11 @@
 Fixed bug that would not set Acceleration options for a VM if the
 $enableAdvancedConfig option was not set in config.php
 
+Added OpenMediaVault authentication module.
+
+Added option to set VM startup mode and associated config option
+in config.php. Use vboxinit script in phpVirtualBox's root folder.
+
 -------------------------------------
 	4.1-4	2011-10-17
 -------------------------------------
